Adding delete fucntionality

--- a/all_bookmarks.html
+++ b/all_bookmarks.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div class="container">
+      <button id="delete-all" class="delete-all-button">
+        ⚔️ Delete All Bookmarks
+      </button>
+
       <h1>📌 All Bookmarked Videos</h1>
       <div id="all-bookmarks">Loading bookmarks...</div>
     </div>
