Adding reame.md file and pin and drag fetaures

--- a/all_bookmarks.html
+++ b/all_bookmarks.html
@@ -57,7 +57,7 @@
         <input
           type="text"
           id="search-input"
-          placeholder="Search bookmarks..."
+          placeholder="Search bookmarks (based on short desc)..."
           style="width: 60%; padding: 5px"
         />
         <select id="sort-options" style="padding: 5px">
